# mind-datapack-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: env_template.py  example_data.csv  use_case_arweave.ipynb  use_case_ipfs.ipynb  use_case_web3storage.ipynb
minddatapack/: __init__.py  arweaveconnector.py  ipfsconnector.py  localfileconnector.py  mindlakeconnector.py  utils.py  web3storageconnector.py
