[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minddatapack"
version = "v1.0.3"
authors = [
  { name="Mind Labs", email="biz@mindnetwork.xyz" },
]
description = "A Python SDK to migrate data between Mind Lake and other storages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["web3", "encryption", "datalake"]
dependencies = [
    "mindlakesdk",
    "arseeding"
]

[project.urls]
"Homepage" = "https://github.com/mind-network/mind-datapack-python"
"Bug Tracker" = "https://github.com/mind-network/mind-datapack-python/issues"

[tool.hatch.build]
exclude = ["/examples", "/tests", "/tutorial"]